# openapi/iM.Cloud.openapi.json
@@ -1252,6 +1252,44 @@
           }
         ]
       }
+    },
+    "/api/navigation/my": {
+      "get": {
+        "tags": [
+          "Navigation"
+        ],
+        "operationId": "Navigation_My",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/NavigationItemDto"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -1710,6 +1748,28 @@
             "items": {
               "type": "string"
             }
+          }
+        }
+      },
+      "NavigationItemDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "key": {
+            "type": "string"
+          },
+          "label": {
+            "type": "string"
+          },
+          "icon": {
+            "type": "string"
+          },
+          "path": {
+            "type": "string"
+          },
+          "order": {
+            "type": "integer",
+            "format": "int32"
           }
         }
       }
